# proxy6-middleware

./: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule.db  debug.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  requirements.txt
app/: celery.py  settings.py  urls.py  utils.py  wsgi.py
app/config/: common.py
app/core/: drf_exception_handlers.py
app/payments/: admin.py  context.py  helpers.py  models.py  serializers.py  urls.py  views.py
app/payments/integrations/: __init__.py  yoomoney.py
app/payments/migrations/: 0001_initial.py  0002_payment_user.py  0003_cryptobotpayment.py  0004_userwriteoff.py
app/proxy6/: helpers.py  models.py  tasks.py  urls.py  utils.py  views.py
app/proxy6/integrations/: __init__.py  proxy6.py
app/proxy6/migrations/: 0001_initial.py  0002_delete_userproxy.py  0003_initial.py
app/users/: apps.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0003_user_balance_alter_user_first_name.py  0004_token.py  0005_alter_token_options_alter_token_unique_together_and_more.py  0006_alter_token_options.py  0007_alter_token_id.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile-dev  Dockerfile-prod
docker/nginx/templates/: default.conf.template
docs/: index.md
frontend/: .dockerignore  nginx.conf  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  utils.js
frontend/src/components/: Navigation.vue  (+1 more)
proxy6-middleware/: wsgi.py
proxy6-middleware/config/: common.py  local.py
(+19 files in other folders)
